tests/invalid/Constant_Invalid_1.whiley
final int X = 1 + Y
final int Y = 1 + X
